fix!: misc host functions api
wrong argument index passed in the logging endpoint